# mlops-club-rag

./: .env.aimexample  .env.example  .gitignore  README.md  TODO.md  TODO.txt  deployment.yaml  docker-compose.yml  pyproject.toml  test_env.py
scripts/: notion2pandas.ipynb  workflow.ipynb
src/: create_pinecone.py  data_cleaning.py  trace.py  vector_store.py  wf_rag_workflow.html  workflow.py
toolhouse/: toolhouse.ipynb
