[project]
name = "mlops-club-rag"
version = "0.1.0"
description = "RAG-A-THON: Taking Python to Production + Cloud Engineering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=5.2.2",
    "llama-index-core>=0.11.17",
    "llama-index-vector-stores-pinecone>=0.2.1",
    "llama-index>=0.11.17",
    "reflex>=0.6.2.post1",
    "ruff>=0.6.9",
]
