[project]
name = "mlops-club-rag"
version = "0.1.0"
description = "RAG-A-THON: Taking Python to Production + Cloud Engineering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=5.2.2",
    "llama-index-core>=0.11.17",
    "llama-index-vector-stores-pinecone>=0.2.1",
    "llama-index>=0.11.17",
    "openinference-instrumentation-llama-index>=3.0.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-proto>=1.12.0",
    "opentelemetry-sdk>=1.27.0",
    "pinecone==5.3.1",
    "python-dotenv>=1.0.1",
    "reflex>=0.6.2.post1",
    "ruff>=0.6.9",
    "transformers>=4.45.2",
    "appnope==0.1.4",
    "asttokens==2.4.1",
    "comm==0.2.2",
    "debugpy==1.8.7",
    "decorator==5.1.1",
    "eval-type-backport==0.2.0",
    "executing==2.1.0",
    "ipykernel==6.29.5",
    "ipython==8.28.0",
    "jedi==0.19.1",
    "jsonpath-python==1.0.6",
    "jsonpickle==3.3.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "llama-index-embeddings-mistralai==0.2.0",
    "llama-index-llms-text-generation-inference==0.2.2",
    "llama-index-utils-huggingface==0.2.0",
    "llama-index-utils-workflow==0.2.1",
    "matplotlib-inline==0.1.7",
    "minijinja==2.2.0",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "prompt-toolkit==3.0.48",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "python-dateutil==2.9.0.post0",
    "pyvis==0.3.2",
    "pyzmq==26.2.0",
    "stack-data==0.6.3",
    "text-generation==0.7.0",
    "tornado==6.4.1",
    "traitlets==5.14.3",
    "llama-deploy>=0.2.3",
]
